--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -8,7 +9,35 @@
 	<script type="text/javascript" src="vendor/vue.js"></script>
 </head>
 <body>
-	<div></div>
+	<div id="index">
+		<nav class="clearfix">
+			<div class="time fl">
+				<span>{{date}}</span>
+				<span>{{day}}</span>
+				<span>{{nongli}}</span>
+			</div>
+			<div class="system fr">
+				<a @click="back()"></a>
+				<a @click="forward()"></a>
+				<a @click="refresh()"></a>
+				<a @click="fullscreen()"></a>
+			</div>
+		</nav>
+		<section class="weather clearfix">
+			<div class="fl">
+			<span>{{weather.temp}}℃</span>
+			<span class=""></span>
+			<span>{{weather.weather}}</span>
+			<span>{{weather.templow}}-{{weather.temphigh}}</span>
+			<span>{{weather.winddirect}}{{weather.windpower}}</span>
+			<span>{{weather.humidity}}%</span>
+			<span>PM2.5 {{weather.aqi.pm2_5}} {{weather.aqi.quality}}</span>
+			</div>
+			<div class="fr">
+				<p v-for="i in weather.index">{{i.detail}}</p>
+			</div>
+		</section>
+	</div>
 </body>
 <script type="text/javascript" src="js/index.js"></script>
 </html>
