--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="vendor/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="vendor/vue.js"></script>
+	<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=57aa7df6e43a4f11bf92ac647e746689"></script>
 </head>
 <body>
 	<div id="index">
@@ -14,7 +15,7 @@
 			<div class="time fl">
 				<span>{{date}}</span>
 				<span>{{day}}</span>
-				<span>{{nongli}}</span>
+				<!-- <span>{{nongli}}</span> -->
 			</div>
 			<div class="system fr">
 				<a @click="back()"></a>
@@ -31,11 +32,30 @@
 			<span>{{weather.templow}}-{{weather.temphigh}}</span>
 			<span>{{weather.winddirect}}{{weather.windpower}}</span>
 			<span>{{weather.humidity}}%</span>
-			<span>PM2.5 {{weather.aqi.pm2_5}} {{weather.aqi.quality}}</span>
+			<span v-if="weather.aqi">PM2.5 {{weather.aqi.pm2_5}} {{weather.aqi.quality}}</span>
 			</div>
 			<div class="fr">
 				<p v-for="i in weather.index">{{i.detail}}</p>
 			</div>
+		</section>
+		<section class="news clearfix">
+				<div  v-for="i in news" class="clearfix" :class='{"oneimg":(!i.thumbnail_pic_s03) && i.thumbnail_pic_s,"threeimg":i.thumbnail_pic_s03,"noimg":!i.thumbnail_pic_s}'>
+					<div class="img fl" v-if="i.thumbnail_pic_s">
+						<img :src="i.thumbnail_pic_s">
+						<img :src="i.thumbnail_pic_s02">
+						<img :src="i.thumbnail_pic_s03">
+					</div>
+					<div class="content fl">
+						<div class="title">
+							<a :href="i.url">{{i.title}}</a>
+						</div>
+						<div class="info">
+							<span class="tag">{{i.category}}</span>
+							<span class="author">{{i.author_name}}</span>
+							<span class="time">{{i.date}}</span>
+						</div>
+					</div>
+				</div>
 		</section>
 	</div>
 </body>
