--- a/resource/前端学习/index.html
+++ b/resource/前端学习/index.html
@@ -4,20 +4,40 @@
 	<meta charset="utf-8">
 	<title></title>
 	<style type="text/css">
-	div{
-		position: relative;
+	.fl{float:left;}
+	.c{
+		clear:left;
 	}
-	div>div{
-		position:absolute;
-		top:0;
-		left:0;
+	.vi{
+		height:50px;
+		overflow-x: auto;
+		overflow-y:hidden;
+		width:100px;
+	}
+	.vi>p{
+		color:green;
+	}
+	.vi p{
+		color:red;
 	}
 	</style>
 </head>
 <body>
-	<div>
-		<div>1</div>
-		<p>2</p>
+	<div class="f">
+		<div class="fl">1</div>
+		<div class="fl">2</div>
 	</div>
+	<div class="vi">
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
+	</div>
+	<div class="c">123</div>
 </body>
 </html>
