--- a/resource/前端学习/index.html
+++ b/resource/前端学习/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title></title>
+	<script type="text/javascript" src='../../vendor/jquery-3.2.1.min.js'></script>
 	<style type="text/css">
 	.fl{float:left;}
 	.c{
@@ -23,21 +24,34 @@
 	</style>
 </head>
 <body>
-	<div class="f">
-		<div class="fl">1</div>
-		<div class="fl">2</div>
+	<div id="d1">
+		<p>这是一个p标签</p>
+		<div id="d2">这是d2</div>
 	</div>
-	<div class="vi">
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-		<p>哈哈哈风刀霜剑发了多少解放路多少分几点开始雷锋精神了发生的积分了是点击冯老师</p>
-	</div>
-	<div class="c">123</div>
 </body>
+<script type="text/javascript">
+	var postdata={a:"123",b:function(){console.log("aaa")}};
+	var c=JSON.parse(postdata);
+	console.log(c)
+	document.getElementById("d2").addEventListener("click",function(){
+		console.log("点击了d2")
+		// event.stopPropagation();
+		$.ajax({
+			url:"http://localhost:81/a",
+			type:"post",
+			data:postdata,
+			processData:true,
+			success:function(){
+				console.log("success")
+			},
+			error:function(){
+				console.log("error")
+			}
+		})
+	},false)
+	document.getElementById("d1").addEventListener("click",function(){
+		console.log("点击了d1");
+		// event.stopPropagation();
+	},true)
+</script>
 </html>
