--- a/resource/前端学习/木瓜/index.html
+++ b/resource/前端学习/木瓜/index.html
@@ -8,13 +8,126 @@
 </head>
 </head>
 <body>
-	<nav></nav>
+	<nav>
+		<div class="fl">
+			<img src="">
+		</div>
+		<div class="fr">
+			<div>
+				<input type="" name="">
+				<a href=""></a>
+			</div>
+			<a href="">登录</a>
+		</div>
+	</nav>
 	<section>
-		<div class="noread"></div>
+		<div class="noread">
+			您有未读信息，请点击查看
+		</div>
 		<div class="content">
-			<div class="menu"></div>
-			<div class="lists"></div>
-			<div class="recommend"></div>
+			<div class="menu">
+				<ul>
+					<li>
+						推荐
+					</li>
+					<li>
+						奥运
+					</li>
+					<li>
+						推荐
+					</li>
+					<li>
+						奥运
+					</li><li>
+						推荐
+					</li>
+					<li>
+						奥运
+					</li>
+					<li>
+						推荐
+					</li>
+					<li>
+						奥运
+					</li>
+					<li>
+						推荐
+					</li>
+					<li>
+						奥运
+					</li>
+				</ul>
+			</div>
+			<div class="lists">
+				<div class="oneimg">
+					<div class="img">
+						<img src="">
+					</div>
+					<div class="noimg">
+					<p><a href="">中国首个海外军事基地中国首个海外军事基地中国首个海外军事基地中国首个海外军事基地</a></p>
+					<div>
+						<a>中华网</a>
+						<a href="">225评论</a>
+						<span>22分钟前</span>
+					</div>
+				</div>
+				</div>
+				<div class="threeimg">
+					<p>非洲男子发现一头四大箱，非洲男子发现一头四大箱，非洲男子发现一头四大箱</p>
+					<div>
+						<div class="img">
+						<img src="">
+					</div>
+					<div class="img">
+						<img src="">
+					</div>
+					<div class="img">
+						<img src="">
+					</div>
+					</div>
+				</div>
+				<div class="noimg">
+					<p>中国首个海外军事基地中国首个海外军事基地中国首个海外军事基地中国首个海外军事基地</p>
+					<div>
+						<a>中华网</a>
+						<a href="">225评论</a>
+						<span>22分钟前</span>
+					</div>
+				</div>
+			</div>
+			<div class="recommend">
+					<div>	
+						<img src="	">	
+					</div>
+					<div class="sp">
+						<h5>
+						热门视频
+						</h5>
+						<div>	
+								<div>	
+										<img src="	">
+								</div>
+								<div>	
+										<img src="	">
+								</div>
+								<div>	
+										<img src="	">
+								</div>
+						</div>
+					</div>
+					<div class="link">	
+						<h5>
+						友情链接	
+						</h5>
+						<div>	
+								<span>光明网</span>
+								<span>光明</span>
+								<span>光明网数</span>
+								<span>光明网</span>
+								<span>光明网</span>
+						</div>
+					</div>
+			</div>
 		</div>
 	</section>
 </body>
